# agentlog

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: agentlog-config.cmake.in
demo/: .gitignore  CMakeLists.txt  README.md  config.json  docker-compose.yml  live-demo.sh  payment_demo.cpp  payment_demo.cpp.backup  run-demo.sh  simple_payment_demo.cpp
demo/simulators/dashboard/: Dockerfile  server.py
demo/simulators/dashboard/templates/: index.html
demo/simulators/jira/: Dockerfile  requirements.txt  server.py
demo/simulators/jira/templates/: index.html
demo/simulators/pagerduty/: Dockerfile  server.py
demo/simulators/pagerduty/templates/: index.html
demo/simulators/slack/: Dockerfile  server.py
demo/simulators/slack/templates/: index.html
examples/: CMakeLists.txt  basic_usage.cpp  integration_demo.cpp  microservices_correlation.cpp  pattern_detection.cpp  payment_service.cpp  setup_test.sh  test_integrations.cpp
include/agentlog/: agentlog.h  anomaly_detector.h  common.h  correlation_engine.h  event.h  incident_manager.h  logger.h  pattern_engine.h
src/: anomaly_detector.cpp  correlation_engine.cpp  curl_helper.cpp  curl_helper.h  event.cpp  incident_manager.cpp  ingestion.cpp  logger.cpp  pattern_engine.cpp  storage.cpp
tests/: CMakeLists.txt
